# svc-dynamic-form-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  project-structure.md
configs/: database.rs  mod.rs  routes.rs
framework/: build.rs  main.rs  user.rs
framework/commands/: make.rs  migrate.rs  mod.rs  queue.rs  schedule.rs  seed.rs  serve.rs  watch.rs
framework/controllers/: mod.rs
framework/middlewares/: mod.rs
framework/models/: mod.rs
framework/repositories/: mod.rs
framework/services/: mod.rs
framework/services/shared/: request_service.rs
framework/stubs/: command.stub  controller.stub
src/: lib.rs  main.rs
src/commands/: kafka.rs  logs_command.rs  mod.rs
src/configs/: database.rs  mod.rs  routes.rs
src/controllers/: faq_controller.rs  handle_request_controller.rs  help_controller.rs  mod.rs  publication_controller.rs  research_controller.rs  rohan_controller.rs
src/services/: mod.rs
src/services/shared/: logger_service.rs  mod.rs  utility_service.rs
